argocd/base/resources/landing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
  annotations:
    argocd.argoproj.io/sync-wave: "3"
