argocd/base/resources/landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: landing
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: ghcr.io/sofianedjerbi/homelanding:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
