argocd/base/resources/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: landing
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 3000
